--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,34 @@ input {
     color: white;
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.25);
 }
+/* Styles pour les écrans de tablettes */
+@media (max-width: 768px) {
+    .card {
+        width: 90%;
+        padding: 10px;
+    }
+    .submit-btn, .selectserv {
+        width: 100%;
+        font-size: 16px;
+    }
+}
+
+/* Styles pour les écrans de téléphones mobiles */
+@media (max-width: 480px) {
+    .container {
+        padding: 5px;
+    }
+    .card {
+        width: 100%;
+        padding: 5px;
+    }
+    .submit-btn, .selectserv {
+        width: 100%;
+        padding: 12px;
+        font-size: 14px;
+    }
+    h1, h2 {
+        font-size: 18px;
+    }
+}
+
