--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ input {
     .card {
         width: 100%;
         padding: 5px;
+        height: 100%;
     }
     .submit-btn, .selectserv {
         width: 100%;
