--- a/styles.css
+++ b/styles.css
@@ -89,35 +89,39 @@ input {
     color: white;
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.25);
 }
-/* Styles pour les écrans de tablettes */
-@media (max-width: 768px) {
-    .card {
-        width: 90%;
-        padding: 10px;
-    }
-    .submit-btn, .selectserv {
-        width: 100%;
-        font-size: 16px;
-    }
-}
-
-/* Styles pour les écrans de téléphones mobiles */
-@media (max-width: 480px) {
-    .container {
-        padding: 5px;
-    }
-    .card {
-        width: 100%;
-        padding: 5px;
-        height: 100%;
-    }
-    .submit-btn, .selectserv {
-        width: 100%;
-        padding: 12px;
-        font-size: 14px;
-    }
+/* Téléphones mobiles */
+@media (max-width: 480px) { 
     h1, h2 {
-        font-size: 18px;
+        font-size: 25px; 
     }
-}
 
+    .card {
+        width: 100%;
+        height: 100%;
+        background: #FAFAFA;
+        border-radius: 18px;
+        padding: 10px;
+        text-align: left;
+        justify-content: left;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.043); 
+    }
+    .container {
+        display: flex;
+        padding: 5px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        height: 90%;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+         }
+         
+    .cardh1 {
+        color: #2E2E2E;
+        font-weight: 50;
+        font-size: 60px;
+        }
+}
