--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
 
 h1 {
     margin-top: 0px;
+    font-size: 50px;
     margin-bottom: 10px; /* Ajoutez un peu d'espace au-dessous du h1 si nécessaire */
 }
 
@@ -64,6 +65,8 @@ input {
     justify-content: center;
     border: none;
 }
+
+
 
 
 .submit-btn {
@@ -91,10 +94,14 @@ input {
     h1, h2 {
         font-size: 25px; 
     }
-
+    input[type="date"], input[type="number"] {
+        width: 100%; /* Assurez-vous que l'input utilise toute la largeur disponible */
+        padding: 10px; /* Ajoutez du padding pour rendre l'input plus facile à manipuler sur mobile */
+        box-sizing: border-box; /* Inclut le padding et la bordure dans la largeur */
+    }
     .card {
         width: 100%;
-        height: 80%;
+        height: 100%;
         background: #FAFAFA;
         border-radius: 18px;
         padding: 10px;
