--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ h2 {
 input {
     background: white;
     width: 80%;
+    height: 60px;
     padding: 20px 20px;
     box-shadow: 0px 4px 9px rgba(4, 0, 0, 0.101);
     border-radius: 8px;
