--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,8 @@ input {
         font-size: 25px; 
     }
     input[type="date"], input[type="number"] {
-        width: 100%; /* Assurez-vous que l'input utilise toute la largeur disponible */
+        width: 100%;
+        height: 60px; /* Assurez-vous que l'input utilise toute la largeur disponible */
         padding: 10px; /* Ajoutez du padding pour rendre l'input plus facile à manipuler sur mobile */
         box-sizing: border-box; /* Inclut le padding et la bordure dans la largeur */
     }
