--- a/styles.css
+++ b/styles.css
@@ -58,11 +58,14 @@ h2 {
 
 input {
     background: white;
-    height: 60px;
-    padding: 20px 20px;
+    width: 90%;
+    height: 50px;
+    font-size: 20px;
+    padding: 10px;
     box-shadow: 0px 4px 9px rgba(4, 0, 0, 0.101);
     border-radius: 8px;
     justify-content: center;
+    color: #0e0e0f;
     border: none;
 }
 
@@ -77,11 +80,11 @@ input {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    font-size: 25px;
+    font-size: 20px;
     color: white;
     border: none;
     width: 90%;
-    max-width: 680px;
+    max-width: 800px;
 }
 
 .selectserv.active {
@@ -95,10 +98,16 @@ input {
         font-size: 25px; 
     }
     input[type="date"], input[type="number"] {
-        width: 400px;
-        height: 70px; /* Assurez-vous que l'input utilise toute la largeur disponible */
-        padding: 10px; /* Ajoutez du padding pour rendre l'input plus facile à manipuler sur mobile */
-        box-sizing: border-box; /* Inclut le padding et la bordure dans la largeur */
+        background: white;
+        width: 350px;
+        height: 50px;
+        padding: 10px 10px;
+        box-shadow: 0px 4px 9px rgba(4, 0, 0, 0.101);
+        border-radius: 8px;
+        justify-content: center;
+        border: none;
+        font-size: 20px; 
+        color: #0e0e0f;
     }
     .card {
         width: 100%;
