--- a/styles.css
+++ b/styles.css
@@ -60,21 +60,19 @@ input {
     background: white;
     width: 90%;
     height: 50px;
-    font-size: 20px;
-    padding: 10px;
+    padding: 10px 10px;
     box-shadow: 0px 4px 9px rgba(4, 0, 0, 0.101);
     border-radius: 8px;
     justify-content: center;
-    color: #0e0e0f;
     border: none;
+    font-size: 20px; 
+    color: #0e0e0f;
+
 }
-
-
-
 
 .submit-btn {
     padding: 20px;
-    background: #5E3BE9;
+    background: #5935e6;
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
     justify-content: center;
@@ -95,11 +93,11 @@ input {
 /* Téléphones mobiles */
 @media (max-width: 480px) { 
     h1, h2 {
-        font-size: 25px; 
+        font-size: 20px; 
     }
     input[type="date"], input[type="number"] {
         background: white;
-        width: 350px;
+        width: 280px;
         height: 50px;
         padding: 10px 10px;
         box-shadow: 0px 4px 9px rgba(4, 0, 0, 0.101);
@@ -110,8 +108,8 @@ input {
         color: #0e0e0f;
     }
     .card {
-        width: 100%;
-        height: 100%;
+        width: 300px;
+        height: auto;
         background: #FAFAFA;
         border-radius: 18px;
         padding: 10px;
@@ -135,7 +133,21 @@ input {
          
     .cardh1 {
         color: #2E2E2E;
-        font-weight: 50;
-        font-size: 60px;
+        font-size: 45px;
+        }
+    
+    .submit-btn {
+            padding: 20px;
+            background: #5935e6;
+            box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.25);
+            border-radius: 8px;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            font-size: 20px;
+            color: white;
+            border: none;
+            width: 280px;
+            max-width: 800px;
         }
 }
